fix(curriculum): increase module list tab contrast (#11062)

--- a/client/src/curriculum/modules-list.scss
+++ b/client/src/curriculum/modules-list.scss
@@ -62,8 +62,12 @@
           outline-style: auto;
         }
 
+        > input:not(:checked) + label {
+          color: var(--text-secondary);
+          opacity: 0.775;
+        }
+
         > label {
-          color: var(--text-inactive);
           cursor: pointer;
           width: max-content;
         }
